creer la structure de projet et le header et footer dans views/index.php

--- a/assets/scss/_custom.scss
+++ b/assets/scss/_custom.scss
@@ -2,13 +2,15 @@
 // Option A: Include all of Bootstrap
 
 // Include any default variable overrides here (though functions won’t be available)
-$primary: #906427;
-$secondary: #B6AC97;
-$dark:#392C1E;
+$primary: #376e62;
+$secondary:#63A17F ;
+$dark:   #04473b ;
 $black:  #292222;
+$background: #252c28;
+$surface: #244b3d;
 $font-family-sans-serif: "Montserrat", sans-serif !default;
 
-@import "../node_modules/bootstrap/scss/bootstrap";
 
+@import "../node_modules/bootstrap/scss/bootstrap";
 
 // Then add additional custom code here
