--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -14,4 +14,80 @@ footer.footer {
     bottom: 0;
     width: 100%;
 }
+.hero-scene {
+    position: relative;
+    &::before{
+    content: "";
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-image: url(/public/images/Capture\ d’écran\ 2025-10-22\ 020717.png);
+    background-size: cover;
+    background-position: center;
+    filter: brightness(0.6);
+    background-color: cadetblue;
+    }  
+    //positionner le texte au-dessus de l'image
+    *{
+        position: relative;
+        z-index: 1;
+    }
+    .hero-scene-content{
+        height: 400px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    
+}
+
+/* Features Section */
+.features {
+    padding: 80px 0;
+    background-color: var(--surface);
+}
+        
+        .section-title {
+            text-align: center;
+            margin-bottom: 50px;
+           
+            color: var(--primary);
+        }
+        
+        .features-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 30px;
+        }
+        
+        .feature-card {
+            text-align: center;
+            background-color: $dark;
+            color: white;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s;
+        }
+        
+        .feature-card:hover {
+            transform: translateY(-10px);
+        }
+        
+        .feature-icon {
+            font-size: 3rem;
+            color: var(--primary);
+            margin-bottom: 20px;
+        }
+        
+        .feature-title {
+            font-size: 1.5rem;
+            margin-bottom: 15px;
+            color: var(--text);
+        }
 
